fix section spacing, float photo

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -18,15 +18,16 @@ font-family: "Roboto", sans-serif;
 }
 
 p{
-  color: #808080;
-  font-size: 15px;
-  line-height: 25px;
+  color: white;
+  font-size: 20px;
+  line-height: 30px;
 }
 
 h2{
-  color: #808080;
+  color: white;
   text-align: left;
   text-decoration: underline;
+  line-height: 50px;
 }
 
 h3{
@@ -44,12 +45,11 @@ h1{
 div{
   background: #f2f2f2;
   position: relative;
-  width: 100%;
 }
 
 section{
-  max-width: 700px;
-  max-height: 550px;
+  min-width: 700px;
+  background-color: grey;
 }
 
 img{
@@ -57,7 +57,9 @@ img{
   border-radius: 50px;
   margin-left: auto;
   margin-right: auto;
-  width: 70%;
+  width: 500px;
+  height: auto;
+  float: right;
 }
 
 td,th,table{
@@ -116,6 +118,7 @@ Top Styling
   background-size: 100%;
   width: 100%;
   height: 500px;
+  min-width: 1000px;
   z-index: 2;
   position: absolute;
   top: 0;
@@ -143,6 +146,7 @@ Body Styling
   padding: 30px;
   align: center;
   position: absolute;
+  min-width: 700px;
   top: 500px;
 }
 
